# ant_sim

./: .gitignore  Cargo.toml  README.md
src/: ant.rs  colony.rs  environment.rs  lib.rs  main.rs  utils.rs  world.rs  world_controller.rs  world_view.rs
src/neural_network/: mlp.rs  mod.rs  neural_network.rs  utils.rs
src/optimization/: mod.rs  nes.rs
src/simulation/: ant.rs  arena.rs  colony.rs  environment.rs  mod.rs  simulation.rs  utils.rs  world_view.rs
src/train_agents/: main.rs
src/visualize_simulation/: main.rs
