[package]
name = "ant_sim"
version = "0.1.0"
authors = ["asdf <asdf>"]
edition = "2018"

[[bin]]
name = "visualize_simulation"
path = "src/visualize_simulation/main.rs"

[[bin]]
name = "train_agents"
path = "src/train_agents/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
rand = "0.8.3"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"
pistoncore-glutin_window = "0.69.0"
ndarray = "0.15.1"
ndarray-linalg = "0.13.1"
nalgebra = "0.26.2"
nalgebra-glm = "0.12.0"
rayon = "1.5.0"
ndarray-rand = "0.14.0"
nes = { git = "https://github.com/WillJStone/rust_es" }
