[package]
name = "ant_sim"
version = "0.1.0"
authors = ["asdf <asdf>"]
edition = "2018"

[[bin]]
name = "visualize_simulation"
path = "src/visualize_simulation/main.rs"

[[bin]]
name = "train_agents"
path = "src/train_agents/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
rand = "0.8.3"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"
pistoncore-glutin_window = "0.69.0"
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.0"
ndarray = "0.15.1"
rust_es = { path = "../rust_es" }
