[package]
name = "ant_sim"
version = "0.1.0"
authors = ["asdf <asdf>"]
edition = "2018"

[[bin]]
name = "visualize_simulation"
path = "src/visualize_simulation/main.rs"

[[bin]]
name = "train_agents"
path = "src/train_agents/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
rand = "0.8.3"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"
pistoncore-glutin_window = "0.69.0"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = { version = "0.14.0" }
ndarray-npy = "0.8.0"
rust_es = { path = "../rust_es" }
